@@ -39,7 +39,6 @@ from authentication.user_portal.models import UserAuthentication
 from services.frontend.models import Frontend
 from services.haproxy.haproxy import HAPROXY_OWNER, HAPROXY_PERMS, HAPROXY_PATH
 from system.cluster.models import Cluster, Node
-from toolkit.network.network import get_hostname
 
 # Extern modules imports
 from jinja2 import Environment, FileSystemLoader
@@ -326,7 +325,7 @@ class Workflow(models.Model):
             jinja2_env = Environment(loader=FileSystemLoader(JINJA_PATH))
             template = jinja2_env.get_template(JINJA_TEMPLATE)
             return template.render({'conf': self.to_template(),
-                                    'nodes': Node.objects.exclude(name=get_hostname()),
+                                    'nodes': Node.objects.exclude(name=settings.HOSTNAME),
                                     'global_config': Cluster.get_global_config().to_dict(fields=['public_token', 'portal_cookie_name'])})
         # In ALL exceptions, associate an error message
         # The exception instantiation MUST be IN except statement, to retrieve traceback in __init__
